kubernetes/pinepods/helm/pinepods/deployment.yaml
---
# Source: pinepods/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pinepods
  labels:
    app.kubernetes.io/name: pinepods
    app.kubernetes.io/instance: pinepods
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  strategy:
    type: Recreate  # Ensures clean volume handling
  selector:
    matchLabels:
      app.kubernetes.io/name: pinepods
      app.kubernetes.io/instance: pinepods
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pinepods
        app.kubernetes.io/instance: pinepods
        app.kubernetes.io/component: main
    spec:
      containers:
        - name: pinepods
          image: "madeofpendletonwool/pinepods:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8040
              protocol: TCP
          volumeMounts:
            - name: downloads
              mountPath: /opt/pinepods/downloads
            - name: backups
              mountPath: /opt/pinepods/backups
          livenessProbe:
            httpGet:
              path: /api/pinepods_check
              port: http
            initialDelaySeconds: 120
            periodSeconds: 30
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 120
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          resources:
            {}
      volumes:
        - name: downloads
          persistentVolumeClaim:
            claimName: pinepods-downloads
        - name: backups
          persistentVolumeClaim:
            claimName: pinepods-backups
