kubernetes/pinepods/helm/pinepods/ingress.yaml
---
# Source: pinepods/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pinepods
  labels:
    app.kubernetes.io/name: pinepods
    app.kubernetes.io/instance: pinepods
    app.kubernetes.io/managed-by: Helm
  annotations:
    ak-oidc-callback: /api/auth/callback
    ak-type: oidc
    cert-manager.io/cluster-issuer: zerossl
    gethomepage.dev/description: Podcast Management
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/icon: mdi-podcast
    gethomepage.dev/name: PinePods
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "pinepods.k.oneill.net"
      secretName: pinepods-tls
  rules:
    - host: "pinepods.k.oneill.net"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pinepods
                port:
                  number: 8040
